--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 EgitimPlatformuAI.xcodeproj/project.xcworkspace/xcuserdata/basarnoyan.xcuserdatad/UserInterfaceState.xcuserstate
+EgitimPlatformuAI.xcodeproj/xcuserdata/basarnoyan.xcuserdatad/xcschemes/xcschememanagement.plist
