--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 EgitimPlatformuAI.xcodeproj/project.xcworkspace/xcuserdata/basarnoyan.xcuserdatad/UserInterfaceState.xcuserstate
 EgitimPlatformuAI.xcodeproj/xcuserdata/basarnoyan.xcuserdatad/xcschemes/xcschememanagement.plist
 .DS_Store
+EgitimPlatformuAI.xcodeproj/xcuserdata/emirhan.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
