--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ EgitimPlatformuAI.xcodeproj/project.xcworkspace/xcuserdata/basarnoyan.xcuserdata
 EgitimPlatformuAI.xcodeproj/xcuserdata/basarnoyan.xcuserdatad/xcschemes/xcschememanagement.plist
 .DS_Store
 EgitimPlatformuAI.xcodeproj/xcuserdata/emirhan.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+EgitimPlatformuAI.xcodeproj/xcuserdata/emirhan.xcuserdatad/xcschemes/xcschememanagement.plist
