add semibold urbanist

--- a/EgitimPlatformuAI/Info.plist
+++ b/EgitimPlatformuAI/Info.plist
@@ -3,10 +3,11 @@
 <plist version="1.0">
 <dict>
     <key>UIAppFonts</key>
-        <array>
-            <string>Urbanist-Regular.ttf</string>
-            <string>Urbanist-Bold.ttf</string>
-        </array>
+    <array>
+        <string>Urbanist-Regular.ttf</string>
+        <string>Urbanist-Bold.ttf</string>
+        <string>Urbanist-SemiBold.ttf</string>
+    </array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
