--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ EgitimPlatformuAI.xcodeproj/xcuserdata/basarnoyan.xcuserdatad/xcschemes/xcscheme
 .DS_Store
 EgitimPlatformuAI.xcodeproj/xcuserdata/emirhan.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 EgitimPlatformuAI/Config.plist
+Pods/Pods.xcodeproj/xcuserdata/basarnoyan.xcuserdatad/xcschemes/xcschememanagement.plist
+EgitimPlatformuAI.xcworkspace/xcuserdata/basarnoyan.xcuserdatad/UserInterfaceState.xcuserstate
