--- a/EgitimPlatformuAI/Config.plist
+++ b/EgitimPlatformuAI/Config.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>OpenAI_API_Key</key>
-	<string></string>
+	<string>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</string>
 </dict>
 </plist>
