--- a/EgitimPlatformuAI/Info.plist
+++ b/EgitimPlatformuAI/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSSpeechRecognitionUsageDescription</key>
+    <string>Kullanıcının sesini metne dönüştürmek için izin gerekir.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Mikrofonu kullanmak için izin gerekir.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
