--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ EgitimPlatformuAI/Config.plist
 Pods/Pods.xcodeproj/xcuserdata/basarnoyan.xcuserdatad/xcschemes/xcschememanagement.plist
 EgitimPlatformuAI.xcworkspace/xcuserdata/basarnoyan.xcuserdatad/UserInterfaceState.xcuserstate
 EgitimPlatformuAI.xcworkspace/xcuserdata/emirhan.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+*.xcbkptlist
