--- a/EgitimPlatformuAI/Info.plist
+++ b/EgitimPlatformuAI/Info.plist
@@ -6,24 +6,26 @@
     <string>Kullanıcının sesini metne dönüştürmek için izin gerekir.</string>
     <key>NSMicrophoneUsageDescription</key>
     <string>Mikrofonu kullanmak için izin gerekir.</string>
-	<key>UIApplicationSceneManifest</key>
-	<dict>
-		<key>UIApplicationSupportsMultipleScenes</key>
-		<false/>
-		<key>UISceneConfigurations</key>
-		<dict>
-			<key>UIWindowSceneSessionRoleApplication</key>
-			<array>
-				<dict>
-					<key>UISceneConfigurationName</key>
-					<string>Default Configuration</string>
-					<key>UISceneDelegateClassName</key>
-					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
-					<key>UISceneStoryboardFile</key>
-					<string>MainScreen</string>
-				</dict>
-			</array>
-		</dict>
-	</dict>
+    <key>UIUserInterfaceStyle</key>
+    <string>Light</string>
+    <key>UIApplicationSceneManifest</key>
+    <dict>
+        <key>UIApplicationSupportsMultipleScenes</key>
+        <false/>
+        <key>UISceneConfigurations</key>
+        <dict>
+            <key>UIWindowSceneSessionRoleApplication</key>
+            <array>
+                <dict>
+                    <key>UISceneConfigurationName</key>
+                    <string>Default Configuration</string>
+                    <key>UISceneDelegateClassName</key>
+                    <string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
+                    <key>UISceneStoryboardFile</key>
+                    <string>MainScreen</string>
+                </dict>
+            </array>
+        </dict>
+    </dict>
 </dict>
 </plist>
