--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Pods/Pods.xcodeproj/xcuserdata/basarnoyan.xcuserdatad/xcschemes/xcschememanageme
 EgitimPlatformuAI.xcworkspace/xcuserdata/basarnoyan.xcuserdatad/UserInterfaceState.xcuserstate
 EgitimPlatformuAI.xcworkspace/xcuserdata/emirhan.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 *.xcbkptlist
+EgitimPlatformuAI/Config.plist
