--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ EgitimPlatformuAI.xcworkspace/xcuserdata/basarnoyan.xcuserdatad/UserInterfaceSta
 EgitimPlatformuAI.xcworkspace/xcuserdata/emirhan.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 *.xcbkptlist
 EgitimPlatformuAI/Config.plist
+Config.plist
